project (vapor-example)
if (PRESET_ARCH_X86_64)
    #enable_language     (ASM_NASM)
    set                 (CMAKE_ASM_NASM_COMPILE_OBJECT "<CMAKE_ASM_NASM_COMPILER> <FLAGS> -o <OBJECT> <SOURCE>")
    add_compile_options ("$<$<COMPILE_LANGUAGE:ASM_NASM>:-f $<IF:$<BOOL:$<TARGET_PROPERTY:NASM_OBJ_FORMAT>>, \ $<TARGET_PROPERTY:NASM_OBJ_FORMAT>, ${CMAKE_ASM_NASM_OBJECT_FORMAT}>>")

    if (UNIX AND NOT APPLE)
        add_executable       (core-mmio-asm core/mmio.asm)
        set_target_properties(core-mmio-asm PROPERTIES NASM_OBJ_FORMAT bin)
        set_target_properties(core-mmio-asm PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/examples/core/bin")
        set_target_properties(core-mmio-asm PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/examples/core/bin")
        set_target_properties(core-mmio-asm PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/examples/core/bin")
    endif()
endif()

add_executable            (core-sys core/sys.c)
target_link_libraries     (core-sys build build-arch build-arch-asm vapor-core)
target_include_directories(core-sys PRIVATE ../include)
set_target_properties     (core-sys PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/examples/core/bin")
set_target_properties     (core-sys PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/examples/core/bin")
set_target_properties     (core-sys PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/examples/core/bin")


add_executable            (core-map core/map.c)
target_link_libraries     (core-map build build-arch build-arch-asm vapor-core)
target_include_directories(core-map PRIVATE ../include)
set_target_properties     (core-map PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/examples/core/bin")
set_target_properties     (core-map PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/examples/core/bin")
set_target_properties     (core-map PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/examples/core/bin")

add_executable            (core-pio core/pio.c)
target_link_libraries     (core-pio build build-arch build-arch-asm vapor-core)
target_include_directories(core-pio PRIVATE ../include)
set_target_properties     (core-pio PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/examples/core/bin")
set_target_properties     (core-pio PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/examples/core/bin")
set_target_properties     (core-pio PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/examples/core/bin")

add_executable            (core-mmio core/mmio.c)
target_link_libraries     (core-mmio build build-arch build-arch-asm vapor-core)
target_include_directories(core-mmio PRIVATE ../include)
set_target_properties     (core-mmio PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/examples/core/bin")
set_target_properties     (core-mmio PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/examples/core/bin")
set_target_properties     (core-mmio PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/examples/core/bin")